# DevOps-Course-Exercise

./: .dockerignore  .env.template  .env.test  .gitignore  .travis.yml  ComponentDiagram.drawio  ContainerDiagram.drawio  Dockerfile  README.md  SystemContext.drawio  Vagrantfile  app.py  app_config.py  appdiagram.drawio  bootstrap.sh  consts.py  docker-compose.yml  entrypoint_prod.sh  flask_config.py  gunicorn.conf.py  item.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  run-dev.sh  run-prod.sh  run_tests.sh  setup.sh  test_app.py  test_env_file.test  trello_items.py  user.py  user_role.py  viewModel.py  writer_role_decorator.py
deploy/: create-server.sh  setup-server.sh  setup.sh  supervisord.conf
diagrams/: ContainerDiagram.drawio
documentation/: component-diagram.drawio  container-diagram.drawio  context-diagram.drawio
e2e_tests/: end_to_end_test.py
entity/: http_method.py  item.py  list_name.py  mock_response.py  trello_card.py  trello_list.py
helpers/: index.py  index_test.py
templates/: index.html
tests/: test_app.py  test_e2e.py  test_integration.py  test_item.py  test_trello_service.py  test_viewmodel.py
tests/features/: todo_list.feature
tests/pages/: index_page.py  item_element.py
tests/step_defs/: conftest.py  test_todo_list.py
trello_requests/: boards.py  helpers.py  index.py  items.py  lists.py  make_trello_request.py  trello_requests.py
views/: view_model.py  view_model_test.py
