[tool.poetry]
name = "Todo"
version = "0.1.0"
description = "Todo app"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
certifi="2020.6.20"
chardet="3.0.4"
click="7.1.2"
Flask="1.1.1"
idna="2.10"
itsdangerous="1.1.0"
Jinja2="2.11.2"
MarkupSafe="1.1.1"
oauthlib="3.1.0"
python-dateutil="2.8.1"
python-dotenv="0.12.0"
pytz="2020.1"
requests="2.24.0"
requests-oauthlib="1.3.0"
six="1.15.0"
urllib3="1.25.9"
Werkzeug="1.0.1"
pymongo = {extras = ["srv"], version = "^3.11.3"}
Flask-Login = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest="5.4.3"
selenium="3.141.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
